--- a/README.adoc
+++ b/README.adoc
@@ -1317,6 +1317,8 @@ Remove unused imports.
 [CAUTION]
 ====
 As mentioned in <<remove-unused-warning, a previous section>>, the `removeUnused` option doesn't play perfectly with the `expandRelative` option. Setting `expandRelative` to `true` might introduce new unused imports (see <<expandRelative, `expandRelative`>>). These newly introduced unused imports cannot be removed by setting `removeUnused` to `true`. This is because unused imports are identified using Scala compilation diagnostics information, and the compilation phase happens before Scalafix rules get applied.
+
+For Scala 3, this option should be explicitly set to `false` because this rule relies on the compiler to get the unused imports, and the Scala 3 compiler cannot yet identify them.
 ====
 
 ==== Value type
